<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>dongting</artifactId>
        <groupId>com.github.dtprj.dongting</groupId>
        <version>0.8.4-SNAPSHOT</version>
    </parent>
    <artifactId>dongting-java11</artifactId>
    <dependencies>
        <dependency>
            <groupId>com.github.dtprj.dongting</groupId>
            <artifactId>dongting-client</artifactId>
            <version>0.8.4-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>dongting-java11-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <!--can't use with release flag -->
                        <arg>--add-exports</arg>
                        <arg>java.base/jdk.internal.misc=dongting.java11</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-classes-to-client</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.parent.basedir}/client/target/classes</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.build.outputDirectory}</directory>
                                    <includes>
                                        <include>**/*.class</include>
                                    </includes>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>